--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -778,9 +778,11 @@
             tnthAjax.getClinical({{ person.id }});
             $("#pca_localized_yes").on("click", function() {
                 tnthAjax.putClinical({{person.id}},"pca_localized","true", $(this));
+                setTimeout('adjustAssessmentInstrument();', 1000);
             });
             $("#pca_localized_no").on("click", function() {
                 tnthAjax.putClinical({{person.id}},"pca_localized","false", $(this));
+                setTimeout('adjustAssessmentInstrument();', 1000);
             });
             getSaveLoaderDiv("profileForm", "pcaLocalizedContainer");
         });
@@ -820,7 +822,7 @@
 
         };
         $(function () {
-            //$("#patientQ").show();
+            $("#patientQ").show();
             $("#patientQ hr").hide();
             {% if person and current_user and person.id != current_user.id %}
                 $("#patientQ input[type='radio']").each(function() {
@@ -837,7 +839,6 @@
                       tnthAjax.putClinical({{person.id}},toCall,toSend);
                       if (toSend == "true" || toCall ==  "pca_localized") {
                         thisItem.parents(".pat-q").nextAll().fadeIn();
-
                       } else {
                         if (toCall == "biopsy") {
                           ["pca_diag", "pca_localized"].forEach(function(fieldName) {
