adding consent date to patients list and change download text to export

--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -12,7 +12,7 @@
     <div class="download-wrapper">
       <div class="orglist-download-container">
           <div>
-            <a href="javascript:void(0);" id="patientAssessmentDownload" class="create-user-link btn btn-lg btn-tnth-primary" data-toggle="modal" data-target="#dataDownloadModal"><span class="glyphicon glyphicon-save"></span>&nbsp;{{ _("Download patient assessment data") }}</a>
+            <a href="javascript:void(0);" id="patientAssessmentDownload" class="create-user-link btn btn-lg btn-tnth-primary" data-toggle="modal" data-target="#dataDownloadModal"><span class="glyphicon glyphicon-save"></span>&nbsp;{{ _("Export assessment data") }}</a>
           </div>
       </div>
     </div>
@@ -21,11 +21,11 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="dataDownloadLabel">{{ _("Download assessment data") }}</h4>
+                <h4 class="modal-title" id="dataDownloadLabel">{{ _("Export assessment data") }}</h4>
               </div>
               <div class="modal-body" style="padding: 1em">
                   <div class="form-group">
-                    <label><em class="text-muted">{{ _("Instrument(s) to download data from:")}}</em></label>
+                    <label><em class="text-muted">{{ _("Instrument(s) to export data from:")}}</em></label>
                     <div id="patientsInstrumentList" class="profile-radio-list" style="margin-left:1em">
                       <!-- this part is hard-coded? should it be dynamically generated -->
                       <div class="checkbox">
@@ -49,7 +49,7 @@
                   <br/>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-default" id="patientsDownloadButton" style="font-size:0.8em">{{ _("Download") }}</button>
+                <button type="button" class="btn btn-default" id="patientsDownloadButton" style="font-size:0.8em">{{ _("Export") }}</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal" style="font-size:0.8em">{{ _("Close") }}</button>
               </div>
             </div>
@@ -103,7 +103,7 @@
               <thead>
                   <tr>
                       <th data-field="userid" data-sortable="true" data-sorter="tnthTables.stripLinksSorter">{{ _("ID") }}</th>
-                      <th data-field="username" data-sortable="true">{{ _("Username") }}</th>
+                      <th data-field="username" data-sortable="true" data-visible="false">{{ _("Username") }}</th>
                       <th data-field="firstname" data-sortable="true">{{ _("First Name") }}</th>
                       <th data-field="lastname" data-sortable="true">{{ _("Last Name") }}</th>
                       <th data-field="email" data-sortable="true">{{ _("Email") }}</th>
@@ -113,6 +113,7 @@
               {% if 'status' in config.PATIENTS_BY_PROVIDER_ADDL_FIELDS %}
                       <th data-field="status" data-sortable="true">{{ _("Assessment Status") }}</th>
               {% endif %}
+                      <th data-field="consent_date" data-sortable="true">{{ _("Consent Date")}}</th>
                   </tr>
               </thead>
               <tbody data-link="row" class="rowlink">
@@ -130,7 +131,8 @@
                       <td>
                         {{ user.assessment_status }}
                       </td>
-                {% endif %}
+                    {% endif %}
+                      <td>{{ user.consent_date if user.consent_date}}</td>
                   </tr>
               {% endfor %}
               </tbody>
