minor text fix in initial queries

--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -68,7 +68,7 @@
           }
           </style>
            <div class="reg-complete-container">
-              <h4 class="profile-item-title"> {{ _("Thank you for registering.") }}</h4>
+              <h4 class="profile-item-title"> {{ _("Thank you.") }}</h4>
               <p>{{ _("Click continue to start using TrueNTH") }}</p>
               <br/>
               <button id="updateProfile" type="submit" class="btn btn-lg btn-tnth-primary" disabled>{{ _("Continue to TrueNTH") }}</button>
