display password requirements alongside password validation error on register page

--- a/portal/templates/flask_user/_macros.html
+++ b/portal/templates/flask_user/_macros.html
@@ -16,7 +16,7 @@
                 {% endif %}
             {% endif %}
         </div>
-        <div id="{{field.id}}InfoText" class="text-muted">{{infoText|safe}}</div>
+        <div id="{{field.id}}InfoText" class="text-muted" style="font-size:0.87em">{{infoText|safe}}</div>
     </div>
 {%- endmacro %}
 
